log
Wed 20 Mar 2024 08:08:20 PM UTC: 
 tests:  0|5
total_score: 0/70
25cdfdf
Wed 20 Mar 2024 08:13:35 PM UTC: 
 exercises.c | 30 ++++++++++++++----------------
 1 file changed, 14 insertions(+), 16 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |     push_back(L, dato);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
5254bba
